<resources>
    <string name="app_name">eyeTrade</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <!-- Currency names -->
    <string name="currency_try">TRY</string>
    <string name="currency_usd">USD</string>
    <string name="currency_eur">EUR</string>
    <string name="currency_gbp">GBP</string>
    <string name="currency_jpy">JPY</string>
    <string name="currency_cny">CNY</string>

    <!-- Cryptocurrency names -->
    <string name="currency_btc">BTC</string>
    <string name="currency_eth">ETH</string>
    <string name="currency_xrp">XRP</string>
    <string name="currency_ltc">LTC</string>
    <string name="currency_xmr">XMR</string>

    <!-- Tab titles -->
    <string name="articles_title">ARTICLES</string>
    <string name="my_articles_title">MY ARTICLES</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_location_picker">Location</string>

    <string-array name="currencies">
        <item>@string/currency_try</item>
        <item>@string/currency_usd</item>
        <item>@string/currency_eur</item>
        <item>@string/currency_gbp</item>
        <item>@string/currency_jpy</item>
        <item>@string/currency_cny</item>
        <item>@string/currency_btc</item>
        <item>@string/currency_eth</item>
        <item>@string/currency_xrp</item>
        <item>@string/currency_ltc</item>
        <item>@string/currency_xmr</item>
    </string-array>
</resources>
